--- a/assets/css/critical/40-post.css
+++ b/assets/css/critical/40-post.css
@@ -9,7 +9,7 @@
 }
 
 .post-meta {
-  color: var(--gray1);
+  color: var(--fg3);
 }
 
 .post-meta__author {
